# universal-mcp-app-template

./: cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.app_name}}/: .gitignore  README.md  bump_and_release.sh  pyproject.toml
{{cookiecutter.app_name}}/src/{{cookiecutter.project_slug}}/: app.py  mcp.py  server.py
{{cookiecutter.app_name}}/tests/: test_app.py
{{cookiecutter.project_slug}}/: README.md  push_on_agentr.sh  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  app.py
{{cookiecutter.project_slug}}/tests/: test_app.py
